--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body, footer, header{
 	margin:0;
 	object-fit:cover;/* Ensures the video covers the entire area without stretching */
 }
+
 /*Website logo*/
 .websitelogo{
 	display:inline-block;
@@ -34,7 +35,7 @@ body, footer, header{
 .socmedlogo{
 	display:inline-block;
 	position:absolute;
-	right:17.5%;
+	right:17%;
 	top:30%;
 	border-radius: 50%;
     transition: transform 0.3s ease, box-shadow 0.3s ease; /* Adds smooth transitions.
@@ -51,6 +52,18 @@ body, footer, header{
    - "4px": Vertical shadow offset (4px below the element).
    - "8px": Blur radius, making the shadow softer as it spreads.
    - "rgba(0, 0, 0, 0.2)": Shadow color is black with 20% opacity*/
+}
+
+@media (max-width: 770px) {
+    .socmedlogo {
+		display:relative;
+        top: 32%;
+        right: 2%;
+		z-index:1000;
+    }
+    .socmedlogo img {
+        height: 50px; /* Reduce size for smaller screens */
+    }
 }
 /* Navigation bar */
 nav {
