--- a/style.css
+++ b/style.css
@@ -319,6 +319,11 @@ footer {
 .footer-bottom a:hover {
   text-decoration: underline;
 }
+@media (max-width: 768px) {
+	footer{
+		font-size:1em;
+	}
+}
 /*---Home page--------------------------------------------------------------------------*/
 /*Homepage Quote*/
 .planpalheader{
